security/pss-compliant.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginxsec
spec:
  containers:
  - name: nginx
    image: nginxinc/nginx-unprivileged
    securityContext:
      runAsNonRoot: true
      allowPrivilegeEscalation: false
      capabilities:
        drop: ["ALL"]
      seccompProfile:
        type: RuntimeDefault
