security/security_context.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  # securityContext:
  #   runAsNonRoot: true
  containers:
  - name: nginx
    image: nginx
