security/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
    #  namespace: default
spec:
  podSelector:
    matchLabels:
      app: apache
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          env: prod
    ports:
    - protocol: TCP
      port: 80
        #  egress:
        #  - to:
        #   - ipBlock:
        #        cidr: 10.0.0.0/24
        #    ports:
        #    - protocol: TCP
        #      port: 5978
